--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: rgb(241, 216, 238);
   color: black;
@@ -8,16 +7,19 @@ body {
   font-size: x-large;
 }
 
-
-
-.links{
-display: inline;
-margin-left:10px;
-font-size: large;
-float: right;
-text-decoration: none;
+.links {
+  margin-left: 10px;
+  font-size: large;
 }
 
+.links a {
+  text-decoration: none;
+}
+.menu-nav {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
 
 h1 {
   color: darkviolet;
@@ -25,15 +27,27 @@ h1 {
   font-weight: normal;
 }
 
+h2 {
+  color: darkviolet;
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+.myname {
+  display: flex;
+  align-items: center;
+}
+.myname h2 {
+  margin-left: 15px;
+}
 
 .mypic {
-   width: 400px;
+  width: 200px;
   clip-path: circle();
 }
 
-
-a{
-  color:darkmagenta
+a {
+  color: darkmagenta;
 }
 
 h2 {
@@ -42,8 +56,8 @@ h2 {
   font-weight: normal;
 }
 .Experience {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   padding-left: 0;
 }
@@ -52,13 +66,21 @@ h2 {
   margin: 5px;
   padding: 5px;
   background-color: cornsilk;
+  display: flex;
+  justify-content: space-between;
+}
+
+.leave_message {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  background-color: cornsilk;
   width: fit-content;
 }
 
-
 #skills ul {
-  display:flex;
-  flex-direction:row;
+  display: flex;
+  flex-direction: row;
   list-style-type: none;
   padding-left: 0;
 }
@@ -70,11 +92,8 @@ h2 {
   width: fit-content;
 }
 
-
-
 .connect-list li {
   display: inline;
-  float: right;
 }
 
 .label-form {
@@ -91,7 +110,6 @@ h2 {
   border: black 2px solid;
   font-size: 1em;
   padding: 10px;
-  
 }
 
 .btn {
@@ -130,19 +148,18 @@ h2 {
   padding: 5px;
 }
 
-
 .connect-section {
-  text-align: right;
+  justify-content: flex-end;
+  display: flex;
+  list-style-type: none;
+  position: relative;
+  bottom: -50px;
 }
-
-
-
 
 /* $desktop: 1200px;
 $laptop: 1024;
 $tablet:768;
 $phone: 480; */
-
 
 /* resize everything based on font-size */
 @media screen and (min-width: 1200px) {
