--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,41 @@
+
+.background-muted-video{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+}
+
 body {
-  background-color: rgb(241, 216, 238);
-  color: black;
+  background: grey;
+  color: cornsilk;
   font-family: "open sans", sans-serif;
   padding: 20px;
   margin: 50px;
   font-size: x-large;
+} 
+
+
+.img-size{
+  width: 1em;
+  height: 1em;  
 }
 
-.links {
+  .links {
   margin-left: 10px;
   font-size: large;
-}
+} 
 
-.links a {
+ .links a {
   text-decoration: none;
 }
 .menu-nav {
   display: flex;
   list-style-type: none;
   justify-content: flex-end;
-}
+} 
+
+
 
 h1 {
   color: darkviolet;
@@ -30,25 +46,25 @@ h1 {
 h2 {
   color: darkviolet;
   font-size: 2rem;
-  font-weight: normal;
+  font-weight: normal; 
 }
 
-.myname {
+/* .myname {
   display: flex;
   align-items: center;
 }
 .myname h2 {
   margin-left: 15px;
-}
+} */
 
-.mypic {
+ .mypic {
   width: 200px;
   clip-path: circle();
-}
+} 
 
 a {
   color: darkmagenta;
-}
+} 
 
 h2 {
   color: darkviolet;
@@ -65,9 +81,9 @@ h2 {
 .Experience li {
   margin: 5px;
   padding: 5px;
-  background-color: cornsilk;
+  background-color: darkslategrey;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; 
 }
 
 .leave_message {
@@ -88,7 +104,7 @@ h2 {
 #skills li {
   margin: 5px;
   padding: 5px;
-  background-color: cornsilk;
+  background-color: darkslategray;
   width: fit-content;
 }
 
@@ -133,7 +149,7 @@ h2 {
   margin: 5px 0;
 }
 
-.removeButton {
+ .removeButton {
   background-color: red;
   padding: 5px;
 }
@@ -163,7 +179,7 @@ $phone: 480; */
 
 /* resize everything based on font-size */
 @media screen and (min-width: 1200px) {
-  html {
+  html { 
     font-size: 100%;
   }
 }
@@ -185,3 +201,6 @@ $phone: 480; */
     font-size: 60%;
   }
 }
+
+
+
