--- a/css/test.css
+++ b/css/test.css
@@ -1,84 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
-*{
-    list-style: none;
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'open sans', sans-serif;
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Raleway", sans-serif;
 }
-body{
-    background: #f5f6fa;
+/*============== Header Section =============*/
+#header {
+  position:fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 300px;
+  transition: all ease-in-out 0.5s;
+  z-index: 9997;
+  transition: all 0.5s;
+  padding: 0 15px;
+  background: #040b14;
+  overflow: auto;
 }
-.wrapper .sidebar{
-    background: rgb(5,68,104);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 225px;
-    height: 100%;
-    padding: 20px;
-    transition: all 0.5s ease;
+#header .profile img {
+  margin: 15px auto;
+  display: block;
+  width: 120px;
+  border: 8px solid #2c2f3f;
 }
-.wrapper .sidebar .profile{
-    margin-bottom: 30px;
-    text-align: center;
+#header .profile h1{
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  -moz-text-align-last: center;
+  text-align-last: center;
+  font-family: poppins, sans-serif;
 }
-.wrapper .sidebar .profile img{
-    display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto;
+.img-size{
+  width: 1em;
+  height: 1em;  
 }
-.wrapper .sidebar .profile h3{
-    color: #ffffff;
-    margin: 10px 0 5px;
-}
-.wrapper .sidebar .profile p{
-    color: rgb(206, 204, 253);
-    font-size: 14px;
-}
-.wrapper .sidebar ul li a {
-    display: block;
-    align-items: center;
-    padding: 12px 15px ;
-    margin-bottom: 8px;
-    border-bottom: 1px solid #10558d;
-    color: rgb(241, 237, 237);
-    font-size: 15px;
-    position: relative;
-    text-decoration: none;
-}
-.wrapper .sidebar ul li a .icon{
-    color: #dee4ec;
-    width: 30px;
-    display: inline-block;
-    align-items: center;
-    padding: 12px 15px ;
-    margin-bottom: 8px;
-    transition: 0.3s;
-    border-bottom: 1px solid #10558d;
-    font-size: 15px;
-    position: relative;
-    text-decoration: none;
-}
-/* link hover */
-.wrapper .sidebar ul li a:hover,
-.wrapper .sidebar ul li a.active{
-    color:#0c7db1;
-    background: white;
-    border-right: 2px solid rgb(5,68,104);
-    
-}
-.wrapper .sidebar ul li a:hover .icon,
-.wrapper .sidebar ul li a:active .icon{
-    color: #0c7db1;
-}
-.wrapper .sidebar ul li a:hover::before,
-.wrapper .sidebar ul li a:active::before{
-    display: block;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .wrapper .profile .social-links a{
   font-size: 18px;
   display: inline-block;
